Finishing the first draft of background and implementation

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -23,6 +23,7 @@
 \usepackage{fancyvrb}
 \usepackage{xcolor}
 \usepackage{flushend}
+\usepackage{wrapfig}
 
 \newcommand{\cmark}{\ding{51}}%
 \newcommand{\xmark}{\ding{55}}%
