--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -16,6 +16,44 @@
  keywords = {concurrency, monitoring, race, threading},
 } 
 
+@inproceedings{DBLP:conf/cgo/ZengR0AJ014,
+  author    = {Qiang Zeng and
+               Junghwan Rhee and
+               Hui Zhang and
+               Nipun Arora and
+               Guofei Jiang and
+               Peng Liu},
+  title     = {DeltaPath: Precise and Scalable Calling Context Encoding},
+  booktitle = {12th Annual {IEEE/ACM} International Symposium on Code Generation
+               and Optimization, {CGO} 2014, Orlando, FL, USA, February 15-19, 2014},
+  pages     = {109},
+  year      = {2014},
+  crossref  = {DBLP:conf/cgo/2014},
+  url       = {https://dl.acm.org/citation.cfm?id=2544150},
+  timestamp = {Fri, 30 Nov 2018 12:48:46 +0100},
+  biburl    = {https://dblp.org/rec/conf/cgo/ZengR0AJ014.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/icse/SumnerZWZ10,
+  author    = {William N. Sumner and
+               Yunhui Zheng and
+               Dasarath Weeratunge and
+               Xiangyu Zhang},
+  title     = {Precise calling context encoding},
+  booktitle = {Proceedings of the 32nd {ACM/IEEE} International Conference on Software
+               Engineering - Volume 1, {ICSE} 2010, Cape Town, South Africa, 1-8
+               May 2010},
+  pages     = {525--534},
+  year      = {2010},
+  crossref  = {DBLP:conf/icse/2010-1},
+  url       = {https://doi.org/10.1145/1806799.1806875},
+  doi       = {10.1145/1806799.1806875},
+  timestamp = {Tue, 06 Nov 2018 11:06:55 +0100},
+  biburl    = {https://dblp.org/rec/conf/icse/SumnerZWZ10.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @inproceedings{terboven2012assessing,
   title={Assessing OpenMP tasking implementations on NUMA architectures},
   author={Terboven, Christian and Schmidl, Dirk and Cramer, Tim and an Mey, Dieter},
