Minor. Change Figure to Fig. to match the latex template

--- a/paper/implementation.tex
+++ b/paper/implementation.tex
@@ -38,7 +38,7 @@ Big objects are handled differently due to two reasons. First, an application ty
  
 \NA{} manages memory allocations as follows. Basically, an allocation will be satisfied from the corresponding freelist at first, if some freed objects exist. Otherwise, a new/never-used object will be allocated.  Objects in the freelist will be allocated using the last-in-first-out order, which helps reduce possible cache misses since last-freed objects are more likely to be hot. A big object will be allocated from the per-node freelist, while a small object will be allocated from the thread's per-thread list if possible and then the per-node freelist. \NM{} moves small objects between per-thread lists and per-node lists: if freed objects in a per-thread list is over a pre-defined threshold, a percentage of freed objects will be moved to the thread's per-node list; Whenever the per-thread list is empty, some objects will be moved from the corresponding per-node freelist. Both movement will take an adaptive mechanism. For instance, if a per-thread list keeps migrating objects from its per-node list successfully, then the percentage of moving to per-node list will be reduced. Similarly, if a per-node list do not have objects to move to the per-thread list, \NM{} will move less frequently.  
 
-In its implementation, \NA{} reduces the overhead of frequent system calls, and borrows the information-computable design from existing allocators in order to quickly locate the physical node information~\cite{FreeGuard, Guarder}. The basic idea of its memory layout is illustrated in Figure~\ref{fig:overview}. Basically, \NA{} takes the advantage of the huge address space of 64-bits machine to achieve the quick lookup. Instead of frequently allocating the memory from the OS, \NA{} obtains a big chunk of memory (few terabytes) from the underlying OS initially, and then divides it to multiple chunks with the same size, where each chunk will be bound to a specific memory node as illustrated in Figure~\ref{fig:overview}. Therefore, the physical node information could be computed directly from the virtual address, by checking the distance from the starting address of the heap. Comparing the method of using a hash table to track the node information~\cite{tcmallocnew}, this mechanism is much faster, since it avoids the hashing and lookup overhead.  
+In its implementation, \NA{} reduces the overhead of frequent system calls, and borrows the information-computable design from existing allocators in order to quickly locate the physical node information~\cite{FreeGuard, Guarder}. The basic idea of its memory layout is illustrated in Fig.~\ref{fig:overview}. Basically, \NA{} takes the advantage of the huge address space of 64-bits machine to achieve the quick lookup. Instead of frequently allocating the memory from the OS, \NA{} obtains a big chunk of memory (few terabytes) from the underlying OS initially, and then divides it to multiple chunks with the same size, where each chunk will be bound to a specific memory node as illustrated in Fig.~\ref{fig:overview}. Therefore, the physical node information could be computed directly from the virtual address, by checking the distance from the starting address of the heap. Comparing the method of using a hash table to track the node information~\cite{tcmallocnew}, this mechanism is much faster, since it avoids the hashing and lookup overhead.  
 
 Each chunk belonging to one node is further divided into two parts, one for small objects (managed with the \texttt{bpSmall} bump pointer) and one for big objects (managed using the \texttt{bpBig} pointer). There are two reasons to separate them. First, we plan to utilize huge page support for big objects, but not small objects, which is further described in Section~\ref{sec:hugepage}.  Second, placing big objects together helps to coalesce two continuous objects into one bigger object. For small objects, \NM{} employs the ``\textbf{Bi}g-\textbf{B}ag-\textbf{O}f-\textbf{P}ages'' (BiBOP) style that each bag will have multiple continuous pages, and each bag will have objects with the same size class. \NM{} currently sets its bag size of small objects to be one megabytes. An object with the size larger than 512 kilobytes is considered to be a big object, which will be always aligned to megabytes. Therefore, \NM{} only requires to record the size information for each megabytes, shown as \texttt{PerMBInfo} in Fig.~\ref{fig:overview}. \NM{} embeds the availability information of each chunk to the \texttt{PerMBInfo} structure, using the lowest significant bit of the size. Each node has  a per-node heap, which includes a per-node freelist to track big objects, and multiple freelists to track small objects with different size classes. As described above, each thread also has its freelists for different size classes. Small objects can be moved between a per-thread freelist and a per-node list as described above. 
  
@@ -50,7 +50,7 @@ Each chunk belonging to one node is further divided into two parts, one for smal
 \subsection{Interleaved and Block-wise Memory Allocation for Shared Objects} 
 \label{sec:mainthread}
 
-\NA{} proposed a new interleaved and block-wise heap for shared objects, as illustrated in Fig.~\ref{fig:overview}. Based on our observation, most NUMA performances issues identified by existing NUMA profilers are related to shared objects~\cite{XULIU, MemProf}. Shared objects are typically allocated in the main thread, but are accessed concurrently by multiple children threads later. Allocating the physical memory for shared objects in one node may introduce load imbalance issue, and therefore causing significant number of remote accesses. Therefore, \NA{} reserves a range of memory for shared objects, called as ``Interleaved Heap'' in Figure~\ref{fig:overview}. \NA{} utilizes the \texttt{mbind} system call to specify that the physical pages of this range will be allocated from all nodes interleavedly. This design helps balance the volume of memory accesses of all memory controllers, reducing interconnect congestion and load imbalance. 
+\NA{} proposed a new interleaved and block-wise heap for shared objects, as illustrated in Fig.~\ref{fig:overview}. Based on our observation, most NUMA performances issues identified by existing NUMA profilers are related to shared objects~\cite{XULIU, MemProf}. Shared objects are typically allocated in the main thread, but are accessed concurrently by multiple children threads later. Allocating the physical memory for shared objects in one node may introduce load imbalance issue, and therefore causing significant number of remote accesses. Therefore, \NA{} reserves a range of memory for shared objects, called as ``Interleaved Heap'' in Fig.~\ref{fig:overview}. \NA{} utilizes the \texttt{mbind} system call to specify that the physical pages of this range will be allocated from all nodes interleavedly. This design helps balance the volume of memory accesses of all memory controllers, reducing interconnect congestion and load imbalance. 
 
 \begin{wrapfigure}{r}{0.6\textwidth}
 \centering
