--- a/paper/implementation.tex
+++ b/paper/implementation.tex
@@ -76,7 +76,7 @@ However, it is very challenging to determine the allocation callsite \textit{uni
 
 \NA{} employs the existing huge page support to further improve the performance. Modern hardware typically installs with huge page support. A huge page is a page that its page size is much larger than 4 kilobytes. Currently, the Linux system has two page sizes, 4 kilobytes and 2 megabytes. Based on the existing study~\cite{hugepages}, huge pages can reduce Translation Look-aside Buffer (TLB) misses that may significantly affect the performance, since a huge page covers a larger range of memory than a normal page. Reducing TLB misses helps reduce the interferences on the cache utilization caused by TLB misses, and therefore reduces cache misses. Huge pages could also reduces the contention in the OS memory manager. We observed around 10\% performance improvement for some applications, when we are using huge page support. 
 
-However, the default huge page support is not good for the performance~\cite{Gaud:2014:LPM:2643634.2643659, 10.1145/3173162.3173203}. In fact, it may have some harmful impact on the performance of NUMA systems. First, it can cause the \textit{hot page effect} when multiple frequently-accessed objects  were  mapped  to  the  same  physical  page, causing the overloading of the corresponding memory node. Second, huge pages are more prone to \textit{page-level false sharing}, when multiple threads are accessing different data inside the same page. Besides that, the huge page may increase the memory footprint~\cite{DBLP:conf/asplos/MaasAIJMR20}, if a partial range of a huge page is not accessed. 
+However, the default huge page support is not good for the performance~\cite{Gaud:2014:LPM:2643634.2643659, DBLP:conf/asplos/PanwarBG19}. In fact, it may have some harmful impact on the performance of NUMA systems. First, it can cause the \textit{hot page effect} when multiple frequently-accessed objects  were  mapped  to  the  same  physical  page, causing the overloading of the corresponding memory node. Second, huge pages are more prone to \textit{page-level false sharing}, when multiple threads are accessing different data inside the same page. Besides that, the huge page may increase the memory footprint~\cite{DBLP:conf/asplos/MaasAIJMR20}, if a partial range of a huge page is not accessed. 
 
 \NA{} utilizes huge pages differently. Ideally, if huge pages are utilized for private objects, then there are no hot page effect and page-level false sharing. Also, if huge pages are only utilized for big objects or all small objects in a huge page will be allocated, then the memory footprint can be minimized. \NA{} takes these consideration into account. Each per-node heap is further divided into two parts as illustrated in Fig.~\ref{fig:overview}: small objects will be allocated from the first half and will be allocated using small pages, while big objects will be allocated from the second half with huge pages (2MB). When a big object is utilized for small objects, only frequently-allocated small objects can utilize such an object. We believe that our design balances the performance and memory consumption.   
 
