--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -1265,6 +1265,46 @@ month={April},}
  keywords = {data-intensive computing, heterogeneous memory, operating systems},
 } 
 
+@inproceedings{DBLP:conf/asplos/PanwarBG19,
+  author    = {Ashish Panwar and
+               Sorav Bansal and
+               K. Gopinath},
+  title     = {HawkEye: Efficient Fine-grained {OS} Support for Huge Pages},
+  booktitle = {Proceedings of the Twenty-Fourth International Conference on Architectural
+               Support for Programming Languages and Operating Systems, {ASPLOS}
+               2019, Providence, RI, USA, April 13-17, 2019},
+  pages     = {347--360},
+  year      = {2019},
+  crossref  = {DBLP:conf/asplos/2019},
+  url       = {https://doi.org/10.1145/3297858.3304064},
+  doi       = {10.1145/3297858.3304064},
+  timestamp = {Sun, 07 Apr 2019 16:16:15 +0200},
+  biburl    = {https://dblp.org/rec/conf/asplos/PanwarBG19.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/asplos/MaasAIJMR20,
+  author    = {Martin Maas and
+               David G. Andersen and
+               Michael Isard and
+               Mohammad Mahdi Javanmard and
+               Kathryn S. McKinley and
+               Colin Raffel},
+  title     = {Learning-based Memory Allocation for {C++} Server Workloads},
+  booktitle = {{ASPLOS} '20: Architectural Support for Programming Languages and
+               Operating Systems, Lausanne, Switzerland, March 16-20, 2020 {[ASPLOS}
+               2020 was canceled because of {COVID-19]}},
+  pages     = {541--556},
+  year      = {2020},
+  crossref  = {DBLP:conf/asplos/2020},
+  url       = {https://doi.org/10.1145/3373376.3378525},
+  doi       = {10.1145/3373376.3378525},
+  timestamp = {Mon, 16 Mar 2020 11:14:36 +0100},
+  biburl    = {https://dblp.org/rec/conf/asplos/MaasAIJMR20.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
 @misc{hugepages,
   author = {Mel Gorman},
   title = {Huge pages},
