--- a/paper/implementation.tex
+++ b/paper/implementation.tex
@@ -87,7 +87,7 @@ However, the default huge page support is not good for the performance~\cite{Gau
 \paragraph{Memory Reutilization:} Some applications may create new threads after some threads have exited. \NM{} re-utilizes the memory for these exited threads. Basically, \NM{} introduces a thread index for each thread, which is utilized to index the corresponding per-thread heap.  \NM{} intercepts thread joins and cancels so that it can assign the indexes of exited threads for newly-created threads, and re-utilize their heaps correspondingly.  
 
 
-
+\paragraph{MiniBag Design to Reduce Memory Consumption:} During the development, we noticed that it excessive memory consumption  can be imposed when the OS utilizes huge pages by default. In order to avoid this issue, we propose the combination of per-node heap and per-thread cache. In order to reduce the contention, \NM{} will obtain multiple objects at a time from the per-node heap. 
 
 
 %https://queue.acm.org/detail.cfm?id=2852078
