--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -2,13 +2,16 @@
 \section{Introduction}
 \label{sec:intro}
 
-The Non-Uniform Memory Access (NUMA) architecture is a basic solution and an appealing solution for the scalability of multi-core era. Compared to Uniform Memory Access (NMUA) architecture, the NUMA architecture avoids the bottleneck of a central memory system: each processor (also known as a domain or node) consists of multiple cores, while each node has its own local memory. The nodes are connected via high-speed inter-connection (such as Quick Path Interconnect (QPI)~\cite{intelqpi} or HyperTransport bus~\cite{hypertransport}) to form a cache-coherent system that presents an abstraction of a single globally addressable memory. For such cache-coherent NUMA (ccNUMA) systems, programmers may not need to change their programs to run on them. 
+The Non-Uniform Memory Access (NUMA) architecture is an appealing solution for the scalability of multi-core era. Compared to Uniform Memory Access (NMUA) architecture, the NUMA architecture avoids the bottleneck of a central memory controller: each processor (also known as a domain or node) consists of multiple cores, while each node can access its own memory controller. Different nodes are connected via high-speed inter-connection (such as Quick Path Interconnect (QPI)~\cite{intelqpi} or HyperTransport bus~\cite{hypertransport}) to form a cache-coherent system that presents an abstraction of a single globally addressable memory. 
 
-However, NUMA systems may have serious performance issues if programs have one of the following issues, such as large amount of remote accesses, load imbalance, contention for interconnection and last level cache~\cite{Blagodurov:2011:CNC:2002181.2002182, Dashti:2013:TMH:2451116.2451157}. There exists different types of approaches that devoting to improve the performance of NUMA systems. 
+%For such cache-coherent NUMA (ccNUMA) systems, programmers may not need to change their programs to run on them. 
 
-First, some research may rely on programmers to manage memory allocations and task assignments explicitly~\cite{Zhang:2015:NGA:2688500.2688507, Kaestle:2015:SSA:2813767.2813787, Lin:2016:MTP:2872362.2872401, Majo:2017:LPC:3057718.3040222}. Although they could improve the performance greatly, they typically require large amount of human effort. Also, existing legacy systems cannot take advantage of such approaches, if without further investment.  
+However, NUMA systems may have serious performance issues if programs have one of the following issues, such as large amount of remote accesses, load imbalance, contention for interconnection and last level cache~\cite{Blagodurov:2011:CNC:2002181.2002182, Dashti:2013:TMH:2451116.2451157}, as discussed more in Section~\ref{sec:overview}. There exists multiple types of approaches that devoting to improve the performance of NUMA systems. 
 
-Second, some researchers propose the method of migrating tasks or physical pages reactively, in order to achieve the better performance~\cite{Blagodurov:2011:CNC:2002181.2002182, AutoNUMA, Dashti:2013:TMH:2451116.2451157, Lepers:2015:TMP:2813767.2813788}. The migration will be based on memory access patterns, or other hardware characteristics. However, some of these approaches are not architecture or OS independent, such as Carrefour~\cite{Dashti:2013:TMH:2451116.2451157}. More importantly, they cannot achieve the optimal performance due to \textbf{their reactive approaches} that only migrate a task or memory pages whenever contention. However, the migration  will require additional overhead. Also, some issues cannot be solved by the reactive approach. For instance, if multiple threads access objects that are located in the same page, the page placement may not offer much benefit~\cite{Gaud:2014:LPM:2643634.2643659}. 
+First, some research may rely on programmers to manage memory allocations and task assignments explicitly~\cite{Zhang:2015:NGA:2688500.2688507, Kaestle:2015:SSA:2813767.2813787, Lin:2016:MTP:2872362.2872401, Majo:2017:LPC:3057718.3040222}. Although they could improve the performance greatly, they typically require significant human effort to rewrite the programs, where legacy systems cannot benefit from. 
+
+Second, some approaches migrate tasks or physical pages reactively based on memory access patterns or other hardware characteristics~\cite{Blagodurov:2011:CNC:2002181.2002182, AutoNUMA, Dashti:2013:TMH:2451116.2451157, Lepers:2015:TMP:2813767.2813788}. These reactive approaches could improve the performance automatically without human involvement. However, they cannot solve all issues. For instance, if multiple objects located in the same page are concurrently accessed by multiple threads, either task migration or page movement may not offer much benefit~\cite{Gaud:2014:LPM:2643634.2643659}.
+%However, these approaches are not architecture or OS independent, such as Carrefour~\cite{Dashti:2013:TMH:2451116.2451157}. More importantly, they cannot achieve the optimal performance due to \textbf{their reactive approaches} that only migrate a task or memory pages whenever contention. However, the migration  will require additional overhead. Also, some issues cannot be solved by the reactive approach. For instance,  
 
 
 Third, some researchers focus on the memory management by providing a new memory manager for existing software~\cite{}. 
