--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -4126,3 +4126,20 @@ language={English}
  keywords = {data placement, memory topology, numa, static analysis},
 } 
 
+@misc{memcached,
+ title = {"Pure python memcached client"},
+ author = {  Sean Reifschneider}, 
+ howpublished = "\url{https://pypi.python.org/pypi/python-memcached}",
+}
+
+@misc{apachetest,
+ title = {ab - Apache HTTP server benchmarking tool},
+ author = {The Apache Software Foundation},
+ howpublished = "\url{https://httpd.apache.org/docs/2.4/programs/ab.html}",
+}
+
+@misc{sqlitetest,
+ title = {How SQLite Is Tested},
+ author = {SQL Developers.},
+ howpublished = "\url{https://www.sqlite.org/testing.html}",
+}
