--- a/paper/main.tex
+++ b/paper/main.tex
@@ -77,7 +77,9 @@
 \input{overview}
 \input{implementation}
 \input{evaluation}
+\input{discussion}
 \input{relatedwork}
+\input{conclusion}
 {
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{ref,emery,tongping}
